--- a/Week2/index.html.1/style.css
+++ b/Week2/index.html.1/style.css
@@ -14,7 +14,7 @@ h1, h2 {
 .upper-case > p {
     text-transform: uppercase;
 }
-.image1 > img {
-    padding: 0;
-    margin: 0;
+img {
+    float: left;
+    margin: 10px;
 }
